Make sure it doesn't look silly when wrapped

--- a/src/components/swaggerPlugins/VersionSelect.scss
+++ b/src/components/swaggerPlugins/VersionSelect.scss
@@ -1,10 +1,15 @@
+@import "../../base";
+
 #version-select {
   select {
     display: inline-block;
   }
 
   button {
-    display: inline-block;
-    margin-left: 25px;
+    display: block;
+    @include media($large-screen) {
+      display: inline-block;
+      margin-left: 25px;
+    }
   }
 }
